sandbox/output
StockProfit.cpp:49:41: error: use of undeclared identifier 'prefit'; did you mean 'profit'?
        maxProfitsWithStockInHand_[i] = prefit;
                                        ^~~~~~
                                        profit
StockProfit.cpp:44:13: note: 'profit' declared here
        int profit = -prices_[i];
            ^
StockProfit.cpp:51:49: error: use of undeclared identifier 'prefit'; did you mean 'profit'?
            maxProfitsWithStockInHand_[i] = max(prefit,
                                                ^~~~~~
                                                profit
StockProfit.cpp:44:13: note: 'profit' declared here
        int profit = -prices_[i];
            ^
2 errors generated.
make: *** [test] Error 1
